--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "axios": "^1.10.0",
     "pinia": "^3.0.3",
     "vue": "^3.5.17",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.5.1",
+    "vuetify": "^3.9.0-beta.1"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.2",
